<resources>
    <string name="app_name">add_numbers</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="add">Add</string>
    <string name="sum">Sum</string>
    <string name="subtract">Subtract</string>
    <string name="difference">Difference</string>
    <string name="multiply">Multiply</string>
</resources>