<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="30dp">


    <EditText
        android:id="@+id/Firstno"
        android:layout_marginTop="61dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_first_number"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/Secondno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_second_number"/>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="add"
        android:text="@string/add"
        android:textSize="20sp"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/subBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="subtract"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/subtract"
        android:textSize="20sp"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/multiplyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="displayToast"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/multiply"
        android:textSize="20sp"
        tools:ignore="OnClick,UsingOnClickInXml" />


    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="44sp"
        android:textColor="#00FF00"
        android:text="@string/sum" />

    <TextView
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#00FF00"
        android:textSize="44sp"
        android:layout_marginTop="25dp"
        android:text="@string/difference" />


</LinearLayout>